# fMRI_RDoC_beh_flags

./: .gitignore  AUTOMATION_SETUP.md  GMAIL_SMTP_SETUP.md  README.md  analyze_behavioral_data.py  calculate_metrics.py  correct_raw_file_names.py  discover_sessions.py  generate_email_body.sh  generate_flags.py  preprocess.py  process_subject.sh  pyproject.toml  requirements.txt  setup.py  setup.sh  test_accuracy_calc.py  test_automation_logic.py  test_metrics_completeness.py  thresholds_config.py
.github/workflows/: process_data.yml  weekly_automated_processing.yml
raw_data/sub-s6/: sub-s6_ses-pretouch_run-1_task-ax_cpt_rdoc_practice__fmri_dateTime-1748041480.json  sub-s6_ses-pretouch_run-1_task-go_nogo_rdoc_practice__fmri_dateTime-1748041280.json  sub-s6_ses-pretouch_run-1_task-operation_span_rdoc_practice__fmri_dateTime-1748470014.json  sub-s6_ses-pretouch_run-1_task-stop_signal_rdoc_practice__fmri_dateTime-1748041220.json  sub-s6_ses-pretouch_task-spatial_cueing_rdoc_practice__fmri_dateTime-1745444092_run-1.json  sub-s6_ses-pretouch_task-visual_search_rdoc_practice__fmri_dateTime-1745444227_run-1 (1).json
raw_data/sub-sK/: sub-SK_ses-1_task-cuedTS_dateTime-1746661495_run-1.json  sub-SK_ses-1_task-flanker_dateTime-1746661908_run-1.json  sub-SK_ses-1_task-spatialCueing_dateTime-1746660854_run-1.json  sub-SK_ses-1_task-visualSearch_dateTime-1746663684_run-1.json
raw_data/sub-sM/: sub-sM_ses-1_task-OpSpan_run-1.json  sub-sM_ses-1_task-goNogo_run-1.json  (+2 more)
rdoc_package/: __init__.py  config.py
src/: calculate_metrics.py  generate_flags.py  preprocess.py
(+90 files in other folders)
